<resources>
    <string name="app_name">AppManager</string>
    <string name="login_username">用户名／手机号</string>
    <string name="login_password">密码</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="remember_account">记住我的账号</string>
    <string name="login">登录</string>
    <string name="press_again_quit_android">再按一次退出程序</string>

    <string name="company_message">上海三菱电梯有限公司</string>
    <string name="company_message_english">SHANGHAI MITSUBISHI ELEVATOR</string>
    <string name="technical_support">技术支持：上海得帆信息技术有限公司</string>
    <string name="copy_right">Copyright© Shanghai Mitsubishi Elevator</string>
    <string name="copy_right_two">上海三菱电梯版权所有 2008 | 沪ICP备05014391号</string>
    <string name="about">关于</string>

    <string name="version">版本号</string>
    <string name="application_details">应用详情</string>
    <string name="application_manager">应用负责人: </string>
    <string name="hello"> 你好</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_clear">清除缓存</string>

</resources>
